# shell-rt

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  shell_next_cmd_lstm.py  shell_rt.bash  shell_rt.zsh
LSTM/: CharLSTM.py
dataset/: char_dataset.py
shell_rt/: __init__.py
shell_rt/integrations/: __init__.py  shell_rt.zsh
tests/: test_bash_integration.py  test_char_dataset.py  test_char_lstm.py  test_char_vocab.py  test_integration_path.py  test_shell_next_cmd_lstm.py  test_zsh_integration.py
vocab/: char_vocab.py
